[tool.poetry]
name = "mui-data-grid"
version = "0.1.0"
description = ""
authors = ["Kevin Kirsche <kev.kirsche@one.verizon.com>"]
readme = "README.md"
packages = [{ include = "mui", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = ">=1,<2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mypy = "^0.982"
bandit = "^1.7.4"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
example-isort-formatting-plugin = "^0.0.4"
example-isort-sorting-plugin = "^0.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
formatter = "example"
profile = "black"
remove_redundant_aliases = true
sort_order = "natural_plus"

[tool.black]
include = '\.pyi?$'
line-length = 88
target-version = ['py310']

[tool.mypy]
follow_imports = "normal"
plugins = ["pydantic.mypy"]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
